--- a/app/assets/stylesheets/pages/home/_about.scss
+++ b/app/assets/stylesheets/pages/home/_about.scss
@@ -1,7 +1,151 @@
 section#about {
   background: map-get($mex, blue);
-  box-sizing: content-box;
-  border-bottom: 200px solid map-get($mex, blue);
+  // box-sizing: content-box;
+  // border-bottom: 200px solid map-get($mex, blue);
+  position: relative;
+  overflow-x: hidden;
+  overflow-y: hidden;
+  
+  div#about-container {
+    position: absolute;
+    top: 0;
+    left: 0;
+    width: 100%;
+    
+    div#about-tondo {
+      position: absolute;
+      width: 20%;
+      right: 100%;
+      background: white;
+      cursor: pointer;
+      z-index: 2;
+      
+      background-repeat: no-repeat;
+      background-position: center center;
+      background-color: #ccc;
+      background-size: cover;
+    
+      @include border-radius(50%);
+      @include transition(all, 1s, $normal-bezier, 0s);
+      
+      &.focus {
+        @include border-radius(16px);
+        right: 15%;
+      }
+    }
+    
+    div#about-cards {
+      div.about-card {
+        position: absolute;
+        left: 200%;
+        width: calc(100% - 30px);
+        background: darken(map-get($mex, blue), 15%);
+        
+        // 100% - breadcrumb height - 30 - 15
+        height: calc(100% - 109px);
+        
+        // breadcrumb height + breadcrumb bottom + 30 / 2
+        top: 15px;
+        
+        @include transform(translateX(-50%));
+        @include transition(all, 1.5s, $normal-bezier, 0s);
+        @include border-radius(8px);
+        
+        div.about-card-tease, div.about-card-info, div.about-card-summary {
+          @include display-flex;
+          @include align-items(center);
+          position: absolute;
+          left: 50%;
+          // height: 100%;
+          width: 100%;
+          padding: 4px;
+          color: white;
+          // z-index: -1;
+          
+          @include transform(translate(-50%, -50%));
+          @include transition(all, 1s, $normal-bezier, 0s);
+          
+          span {
+            display: block;
+            width: 100%;
+            text-align: center;
+            position: relative;
+          }
+        }
+        
+        div.about-card-tease {
+          font-size: 3.75em;
+          top: 25%;
+          
+          @include respond-to(phone) { font-size: 1.75em; }
+        }
+        
+        div.about-card-info {
+          font-size: 3.25em;
+          top: 50%;
+          
+          @include respond-to(phone) { font-size: 1.25em; }
+        }
+        
+        div.about-card-summary {
+          font-size: 2.5em;
+          top: 75%;
+          
+          @include respond-to(phone) { font-size: 1em; }
+        }
+      }
+    }
+    
+    div#about-breadcrumbs {
+      position: absolute;
+      bottom: 0;
+      width: 100%;
+      
+      div {
+        display: inline-block;
+        text-align: center;
+        position: absolute;
+        left: -64px;
+        bottom: 15px;
+        height: 64px;
+        width: 64px;
+        padding: 4px;
+        background: white;
+        // margin-bottom: 8px;
+        cursor: pointer;
+        
+        @include border-radius(50%);
+        @include transition(all, 0s, $normal-bezier, 0s);
+        @include transform(translateX(-50%));
+        
+        svg {
+          stroke: darken(map-get($mex, blue), 15%);
+        }
+        
+        &.hover {
+          background: darken(map-get($mex, blue), 5%);
+          border: 1px solid white;
+          
+          svg {
+            stroke: white;
+          }
+        }
+        
+        &.mousedown, &.active {
+          background: darken(map-get($mex, blue), 15%);
+          border: 1px solid white;
+          
+          svg {
+            stroke: white;
+          }
+        }
+        
+        &.mousedown {
+          @include transform(translate(-50%,4px));
+        }
+      }
+    }
+  }
   
   div#about-hero {
     @include display-flex;
@@ -56,7 +200,7 @@ section#about {
     bottom: 0px;
     border: 4px solid white;
     right: 100%;
-    background: darken(map-get($mex, blue), 20%);
+    background: darken(map-get($mex, blue), 15%);
     z-index: 1;
     
     @include transition(all, 1s, $normal-bezier, 0s);
@@ -233,7 +377,7 @@ section#about {
         @include border-radius(50%);
         
         svg {
-          stroke: darken(map-get($mex, blue), 20%);
+          stroke: darken(map-get($mex, blue), 15%);
         }
       }
     }
@@ -282,7 +426,7 @@ section#about {
     right: 30px;
     text-decoration: none;
     font-size: 2em;
-    color: darken(map-get($mex, blue), 20%);
+    color: darken(map-get($mex, blue), 15%);
     background: white;
       
     @include respond-to(phone) {
