--- a/app/views/pages/home/_about.html.erb
+++ b/app/views/pages/home/_about.html.erb
@@ -5,15 +5,10 @@
     <div id="about-cards">
       <div id="about-card-contact" class="about-card">
         <div>
-          <div class="about-card-head">
-            <span>Maybe you feel like reaching out</span>
-          </div>
-          <div class="about-card-body">
-            <a id="about-contact" href="#contact">
-              <span>CONTACT</span>
-            </a>
-          </div>
-        </div>
+          <span>Maybe you feel like reaching out</span>
+          <a id="about-contact" href="#contact">
+            <span>CONTACT</span>
+          </a>
       </div>
     </div>
     
@@ -21,7 +16,7 @@
       <div><%= render "icons/beard" %></div>
       <div><%= render "icons/leigh" %></div>
       <div><%= render "icons/hound" %></div>
-      <div><%= render "icons/contact" %></div>
+      <div id="about-breadcrumb-contact"><%= render "icons/contact" %></div>
     </div>
   </div>
 </section>
