--- a/app/assets/stylesheets/_/_reset.scss
+++ b/app/assets/stylesheets/_/_reset.scss
@@ -12,6 +12,7 @@ $serif: 'Poiret One', cursive;
 html, body {
   // min-height: 100% !important;
   // height: 100%;
+  background: #aaaaaa;
 }
 
 body {
